[package]
name = "bc_indicators"
version = "0.1.0"
edition = "2024"

[dependencies]
rustc-hash = "1.1"
# bc_utils_lg = {git = "https://github.com/feUHMYHiEggtcIGA/bc_utils_lg.git", branch = "main"}
bc_utils_lg = {path = "../bc_utils_lg"}
bc_utils = {path = "../bc_utils"}

[dev-dependencies]
criterion = {version = "0.3.5", features = ["html_reports"]}